@@ -96,7 +96,7 @@ addToBlacklist = {
 	push $0 $blacklist;
 };
 
-gui.size 600 200;
+gui.size 600 220;
 call $chooseWord;
 life = 10;
 loop {
