@@ -1,6 +1,6 @@
 package com.devkev.devscript.raw;
 
 public interface ApplicationListener {
-	/**Exit codes are: <br>{@link Block#DONE}<br> {@link Block#ERROR}*/
-	public void done(int exitCode);
+	
+	public void done(ExecutionState exitState);
 }
